- changed header images - removed logo on header graphics

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         Your browser does not support the video tag.
     </video>
 </section>
+
+<!-- - -----------------------FÜR BEHÖRDEN---------------------  -->
 <section class="q-stage q-anchor" id="q-anchor-behoerden">
     <section class="q-text-container">
         <header>
@@ -60,6 +62,7 @@
             <p>Für Behörden</p>
         </header>
     </section>
+    <!-- SHOW NO LOGON ON THE HEADER  FOR NOW
     <section class="q-img-container">
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
@@ -67,82 +70,83 @@
             <img src="assets/img/QUARANO_SIGNET_weiss_Kopie.png" alt="Quarano"/>
         </picture>
     </section>
+    -->
 </section>
 <section class="q-stage q-odd-background q-bullet-point-list">
-    <article class="q-bullet-point">
-        <div class="q-bullet-point-item">
-            <span class="material-icons-outlined md-dark md-inactive">access_time</span>
-        </div>
-        <section class="q-bullet-point-desc">
-            <header>
-                <h2 class="q-bullet-point-head">Entlastung und Automatisierung</h2>
-            </header>
-            <p>Durch die Digitalisierung von Selbstauskünften bestätigter COVID-19 Fälle werden die momentan manuell
-                erhobenen Daten automatisch und in Echtzeit dem Gesundheitsamt zur Verfügung gestellt. Es bleibt (auch
-                bei steigenden Fallzahlen) mehr Zeit für die kritischen und wirklich betreuungsintensiven Fälle.
-                Eine einfache und schnelle Einführung ermöglicht schnelle Entlastung (Blaupause von existierenden Ämtern und web-basiertes Roll-Out).</p>
-        </section>
-    </article>
-    <article class="q-bullet-point">
-        <div class="q-bullet-point-item">
-            <span class="material-icons-outlined md-dark md-inactive">grain</span>
-        </div>
-        <section class="q-bullet-point-desc">
-            <header>
-                <h2 class="q-bullet-point-head">Infektionsketten / Cluster</h2>
-            </header>
-            <p>Durch die Angaben über Kontaktpersonen ersten Grades (Kategorie I und III) können diese direkt informiert und gesammelt
-                erfasst werden. Über eine Oberfläche können die Gesundheitsbehörden direkt einsehen, welche Kontakte
-                angegeben wurden und ggfls. kontaktiert werden müssen. Diese Nachverfolgung und Dokumentation der
-                Cluster / Infektionsketten wird auch mittelfristig (bei Lockerung der Maßnahmen) ein zentraler Punkt des
-                Epidemiemanagements.</p>
-        </section>
-    </article>
-    <article class="q-bullet-point">
-        <div class="q-bullet-point-item">
-           <span class="material-icons-outlined md-dark md-inactive">poll</span>
-        </div>
-        <section class="q-bullet-point-desc">
-            <header>
-                <h2 class="q-bullet-point-head">Überblick in Echtzeit</h2>
-            </header>
-            <p>Durch die tägliche Selbsterfassung und Dokumentation des Verlaufs hat das Gesundheitsamt und der Patient
-                (bzw. Verdachtsfall) einen zuverlässigen Überblick über die Historie und den Verlauf während der
-                Quarantäne bzw. der häuslichen Isolation.</p>
-        </section>
-    </article>
-    <article class="q-bullet-point">
-        <div class="q-bullet-point-item">
-            <span class="material-icons-outlined md-dark md-inactive">verified_user </span>
-        </div>
-        <section class="q-bullet-point-desc">
-            <header>
-                <h2 class="q-bullet-point-head">Sicherheit</h2>
-            </header>
-            <p>Die Daten werden nach aktuellsten Sicherheitsaspekten übermittelt und liegen auf zertifizierten Servern
-                in Deutschland. Durch die Reduktion auf meldepflichtige Daten werden auch keine weiteren Daten erfasst.
-                Zudem werden diese nach der erfolgten Dokumentation durch die Gesundheitsbehörden gelöscht.</p>
-        </section>
-    </article>
+<article class="q-bullet-point">
+    <div class="q-bullet-point-item">
+        <span class="material-icons-outlined md-dark md-inactive">access_time</span>
+    </div>
+    <section class="q-bullet-point-desc">
+        <header>
+            <h2 class="q-bullet-point-head">Entlastung und Automatisierung</h2>
+        </header>
+        <p>Durch die Digitalisierung von Selbstauskünften bestätigter COVID-19 Fälle werden die momentan manuell
+            erhobenen Daten automatisch und in Echtzeit dem Gesundheitsamt zur Verfügung gestellt. Es bleibt (auch
+            bei steigenden Fallzahlen) mehr Zeit für die kritischen und wirklich betreuungsintensiven Fälle.
+            Eine einfache und schnelle Einführung ermöglicht schnelle Entlastung (Blaupause von existierenden Ämtern und web-basiertes Roll-Out).</p>
+    </section>
+</article>
+<article class="q-bullet-point">
+    <div class="q-bullet-point-item">
+        <span class="material-icons-outlined md-dark md-inactive">grain</span>
+    </div>
+    <section class="q-bullet-point-desc">
+        <header>
+            <h2 class="q-bullet-point-head">Infektionsketten / Cluster</h2>
+        </header>
+        <p>Durch die Angaben über Kontaktpersonen ersten Grades (Kategorie I und III) können diese direkt informiert und gesammelt
+            erfasst werden. Über eine Oberfläche können die Gesundheitsbehörden direkt einsehen, welche Kontakte
+            angegeben wurden und ggfls. kontaktiert werden müssen. Diese Nachverfolgung und Dokumentation der
+            Cluster / Infektionsketten wird auch mittelfristig (bei Lockerung der Maßnahmen) ein zentraler Punkt des
+            Epidemiemanagements.</p>
+    </section>
+</article>
+<article class="q-bullet-point">
+    <div class="q-bullet-point-item">
+       <span class="material-icons-outlined md-dark md-inactive">poll</span>
+    </div>
+    <section class="q-bullet-point-desc">
+        <header>
+            <h2 class="q-bullet-point-head">Überblick in Echtzeit</h2>
+        </header>
+        <p>Durch die tägliche Selbsterfassung und Dokumentation des Verlaufs hat das Gesundheitsamt und der Patient
+            (bzw. Verdachtsfall) einen zuverlässigen Überblick über die Historie und den Verlauf während der
+            Quarantäne bzw. der häuslichen Isolation.</p>
+    </section>
+</article>
+<article class="q-bullet-point">
+    <div class="q-bullet-point-item">
+        <span class="material-icons-outlined md-dark md-inactive">verified_user </span>
+    </div>
+    <section class="q-bullet-point-desc">
+        <header>
+            <h2 class="q-bullet-point-head">Sicherheit</h2>
+        </header>
+        <p>Die Daten werden nach aktuellsten Sicherheitsaspekten übermittelt und liegen auf zertifizierten Servern
+            in Deutschland. Durch die Reduktion auf meldepflichtige Daten werden auch keine weiteren Daten erfasst.
+            Zudem werden diese nach der erfolgten Dokumentation durch die Gesundheitsbehörden gelöscht.</p>
+    </section>
+</article>
 </section>
 <section class="q-content">
-    <header>
-        <h2>quarano e.V. steht für Digitalisierung, Datensicherheit und Transparenz (open source)</h2>
-        <h3>mit namhaften Partnern sowie der Förderung unter Schirmherrschaft der deutschen Regierung</h3>
-        <p>Von Anfang an war uns klar, dass diese Aufgabe auf der einen Seite eine stabile, moderne und 100% sichere Software braucht, die sich
-                komplett an den Bedürfnissen der deutschen Gesundheitsbehörden ausrichtet. Mit zuverlässigen Partnern, Hosting in Deutschland und
-                einem Fokus auf Datenschutz können wir dies gewährleisten. Auf der anderen Seite ist die Applikation selbst vollständig unter einer
-                open-source Lizenz (EUPL-1.2). Das ermöglicht es auch anderen Anbietern, vor allem z.B. in anderen Ländern von der Entwicklung zu profitieren
-                und sie zur Entlastung der Behörden einzusetzen.</p>
-    </header>
+<header>
+    <h2>quarano e.V. steht für Digitalisierung, Datensicherheit und Transparenz (open source)</h2>
+    <h3>mit namhaften Partnern sowie der Förderung unter Schirmherrschaft der deutschen Regierung</h3>
+    <p>Von Anfang an war uns klar, dass diese Aufgabe auf der einen Seite eine stabile, moderne und 100% sichere Software braucht, die sich
+            komplett an den Bedürfnissen der deutschen Gesundheitsbehörden ausrichtet. Mit zuverlässigen Partnern, Hosting in Deutschland und
+            einem Fokus auf Datenschutz können wir dies gewährleisten. Auf der anderen Seite ist die Applikation selbst vollständig unter einer
+            open-source Lizenz (EUPL-1.2). Das ermöglicht es auch anderen Anbietern, vor allem z.B. in anderen Ländern von der Entwicklung zu profitieren
+            und sie zur Entlastung der Behörden einzusetzen.</p>
+</header>
 </section>
-<section class="q-info-graph">
-    <picture>
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)"/>
-        <img src="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik) z.b: wie einfach ein Rollout. oder noch mal Überblick wie es läuft`?" alt="Quarano"/>
-    </picture>
-</section>
+<!-- <section class="q-info-graph">
+<picture>
+    <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+            srcset="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)"/>
+    <img src="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik) z.b: wie einfach ein Rollout. oder noch mal Überblick wie es läuft`?" alt="Quarano"/>
+</picture>
+</section> -->
 <section class="q-stage q-odd-background">
     <section class="q-content q-content-narrow">
         <p>quarano ist ein auf die COVID-19 Pandemie zugeschnittenes Tool, das es Ihnen als Gesundheitsbehörde erleichtert
@@ -152,6 +156,9 @@
         <p class="q-center"><a href="#q-anchor-contact" class="q-button">Kontakt</a></p>
     </section>
 </section>
+
+
+<!-- ------------------------FÜR BÜRGER ---------------------  -->
 <section class="q-stage q-anchor" id="q-anchor-buerger">
     <section class="q-text-container">
         <header>
@@ -160,6 +167,7 @@
             <p>Für Bürger</p>
         </header>
     </section>
+    <!-- SHOW NO LOGON ON THE CONTENT FOR NOW
     <section class="q-img-container">
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
@@ -167,6 +175,8 @@
             <img src="assets/img/QUARANO_SIGNET_weiss_Kopie.png" alt="Quarano"/>
         </picture>
     </section>
+
+    -->
 </section>
 <section class="q-content">
     <header>
@@ -190,11 +200,13 @@
     </section>
 </section>
 <section class="q-info-graph">
+    <!--
     <picture>
         <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                 srcset="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)"/>
         <img src="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)" alt="Quarano"/>
     </picture>
+    -->
 </section>
 <section class="q-content q-odd-background q-contact" id="q-anchor-contact">
     <header>
