- text adaption from Thorsten - added impressum text - exchanged logos and resized them - exchanged headers with blue overlay variant

--- a/agb.html
+++ b/agb.html
@@ -37,13 +37,22 @@
     </section>
 
 </section>
-<section class="q-content">
+<section class="q-content q-sponsor-icons">
     <header>
-        <h2>Sponsoren und Partner</h2>
+        <picture >
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/sponsor_opensource@2x.png"/>
+            <img src="assets/img/sponsor_opensource.png" alt="Open Source Initiative"/>
+        </picture>
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/quarano_sponsoren@2x.png"/>
-            <img src="assets/img/quarano_sponsoren.png" alt="Sponsoren und Partner"/>
+                    srcset="assets/img/sponsor_enabler@2x.png"/>
+            <img src="assets/img/sponsor_enabler.png" alt="wirvsvirus enabler"/>
+        </picture>
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/sponsor_intersoft@2x.png"/>
+            <img src="assets/img/sponsor_intersoft.png" alt="Intersoft"/>
         </picture>
     </header>
 </section>
