--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section class="q-stage" id="q-anchor-home">
     <section class="q-text-container">
         <header>
-            <h1>Digitale Dokumentation von COVID-19 Indexfällen & Kontaktpersonen für Gesundheitsbehörden
+            <h1>Digitale Dokumentation von COVID-19 Infektionsfällen & Kontaktpersonen für Gesundheitsbehörden
             </h1>
         </header>
         <div>
@@ -43,12 +43,15 @@
 </section>
 <section class="q-content">
     <h2>Sofortige Entlastung der Behörden durch Unterstützung bei Administration und Dokumentation</h2>
-    <p>Als “Administration as a Service” haben wir mit quarano eine open source Webapplikation zur Prozessautomatisierung bei Gesundheitsbehörden entwickelt. Die Dokumentation der Verläufe von Infizierten und deren Kontaktpersonen in Quarantäne bzw. häuslicher Isolation wird durch eine Webapplikation abgebildet, die schnell und intuitiv in den vorhandenen Prozess der Gesundheitsämter integriert werden kann und somit ab sofort für Entlastung sorgt.</p>
+    <p>Als “Administration as a Service” bietet quarano eine open source Webapplikation zur
+      Prozessautomatisierung bei Gesundheitsbehörden. Die Dokumentation der Verläufe von
+      Infizierten und deren Kontaktpersonen in Quarantäne bzw. häuslicher Isolation wird durch eine
+      Webapplikation abgebildet, die schnell und intuitiv in den vorhandenen Prozess der Gesundheitsämter
+      integriert werden kann und somit ab sofort für Entlastung sorgt.</p>
 </section>
 <section class="q-content">
     <video controls poster="assets/img/Bildschirmfoto_2020_04_20_um_1.png" class="q-video">
-        <source src="movie.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
+        <source src="assets/video/quarano.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </section>
@@ -57,7 +60,7 @@
 <section class="q-stage q-anchor" id="q-anchor-behoerden">
     <section class="q-text-container">
         <header>
-            <h1>Digitale Dokumentation<br/>der Indexfälle<br/>& der Kontaktfälle</h1>
+            <h1>Digitale Dokumentation<br/>von Infektionsfällen <br/>& Kontaktpersonen</h1>
             <hr/>
             <p>Für Behörden</p>
         </header>
@@ -83,8 +86,8 @@
         </header>
         <p>Durch die Digitalisierung von Selbstauskünften bestätigter COVID-19 Fälle werden die momentan manuell
             erhobenen Daten automatisch und in Echtzeit dem Gesundheitsamt zur Verfügung gestellt. Es bleibt (auch
-            bei steigenden Fallzahlen) mehr Zeit für die kritischen und wirklich betreuungsintensiven Fälle.
-            Eine einfache und schnelle Einführung ermöglicht schnelle Entlastung (Blaupause von existierenden Ämtern und web-basiertes Roll-Out).</p>
+            bei steigenden Fallzahlen) mehr Zeit für die kritischen und betreuungsrelevanten Fälle.
+            Eine einfache und schnelle Einführung (web-basiertes Roll-Out und cloud hosting) ermöglicht schnelle Entlastung</p>
     </section>
 </article>
 <article class="q-bullet-point">
@@ -95,11 +98,11 @@
         <header>
             <h2 class="q-bullet-point-head">Infektionsketten / Cluster</h2>
         </header>
-        <p>Durch die Angaben über Kontaktpersonen ersten Grades (Kategorie I und III) können diese direkt informiert und gesammelt
+        <p>Durch die Angaben über direkte Kontaktpersonen des Infektionsfalls (RKI Kategorie I und III) können diese direkt informiert und gesammelt
             erfasst werden. Über eine Oberfläche können die Gesundheitsbehörden direkt einsehen, welche Kontakte
             angegeben wurden und ggfls. kontaktiert werden müssen. Diese Nachverfolgung und Dokumentation der
-            Cluster / Infektionsketten wird auch mittelfristig (bei Lockerung der Maßnahmen) ein zentraler Punkt des
-            Epidemiemanagements.</p>
+            Cluster / Infektionsketten durch die Gesundheitsbehörden ist bereits jetzt ein zentraler Punkt des nationalen
+            Epidemiemanagements - und wird mit Lockerung der Maßnahmen einen noch höheren Stellenwert bekommen</p>
     </section>
 </article>
 <article class="q-bullet-point">
@@ -112,7 +115,7 @@
         </header>
         <p>Durch die tägliche Selbsterfassung und Dokumentation des Verlaufs hat das Gesundheitsamt und der Patient
             (bzw. Verdachtsfall) einen zuverlässigen Überblick über die Historie und den Verlauf während der
-            Quarantäne bzw. der häuslichen Isolation.</p>
+            Quarantäne bzw. der häuslichen Isolation</p>
     </section>
 </article>
 <article class="q-bullet-point">
@@ -125,15 +128,15 @@
         </header>
         <p>Die Daten werden nach aktuellsten Sicherheitsaspekten übermittelt und liegen auf zertifizierten Servern
             in Deutschland. Durch die Reduktion auf meldepflichtige Daten werden auch keine weiteren Daten erfasst.
-            Zudem werden diese nach der erfolgten Dokumentation durch die Gesundheitsbehörden gelöscht.</p>
+            Zudem werden diese nach der erfolgten Dokumentation durch die Gesundheitsbehörden gelöscht</p>
     </section>
 </article>
 </section>
 <section class="q-content">
 <header>
     <h2>quarano e.V. steht für Digitalisierung, Datensicherheit und Transparenz (open source)</h2>
-    <h3>mit namhaften Partnern sowie der Förderung unter Schirmherrschaft der deutschen Regierung</h3>
-    <p>Von Anfang an war uns klar, dass diese Aufgabe auf der einen Seite eine stabile, moderne und 100% sichere Software braucht, die sich
+    <h3>mit namhaften Partnern sowie der Förderung unter Schirmherrschaft der deutschen Bundesregierung</h3>
+    <p>Von Anfang an war uns klar, dass eine Applikation für die Gesundheitsbehörden auf der einen Seite eine stabile, moderne und sichere Software braucht, die sich
             komplett an den Bedürfnissen der deutschen Gesundheitsbehörden ausrichtet. Mit zuverlässigen Partnern, Hosting in Deutschland und
             einem Fokus auf Datenschutz können wir dies gewährleisten. Auf der anderen Seite ist die Applikation selbst vollständig unter einer
             open-source Lizenz (EUPL-1.2). Das ermöglicht es auch anderen Anbietern, vor allem z.B. in anderen Ländern von der Entwicklung zu profitieren
@@ -218,13 +221,22 @@
         </ul>
     </header>
 </section>
-<section class="q-content">
+<section class="q-content q-sponsor-icons">
     <header>
-        <h2>Sponsoren und Partner</h2>
+        <picture >
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/sponsor_opensource@2x.png"/>
+            <img src="assets/img/sponsor_opensource.png" alt="Open Source Initiative"/>
+        </picture>
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/quarano_sponsoren@2x.png"/>
-            <img src="assets/img/quarano_sponsoren.png" alt="Sponsoren und Partner"/>
+                    srcset="assets/img/sponsor_enabler@2x.png"/>
+            <img src="assets/img/sponsor_enabler.png" alt="wirvsvirus enabler"/>
+        </picture>
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/sponsor_intersoft@2x.png"/>
+            <img src="assets/img/sponsor_intersoft.png" alt="Intersoft"/>
         </picture>
     </header>
 </section>
@@ -242,7 +254,7 @@
 
     </section>
     <section>
-        <picture>
+        <picture class = "sponsor-label">
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                     srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
             <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
