- made  sponsor logos smaller - switched video start image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       integriert werden kann und somit ab sofort für Entlastung sorgt.</p>
 </section>
 <section class="q-content">
-    <video controls poster="assets/img/Bildschirmfoto_2020_04_20_um_1.png" class="q-video">
+    <video controls poster="assets/img/video_start.jpg" class="q-video">
         <source src="assets/video/quarano.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
