--- a/impressum.html
+++ b/impressum.html
@@ -18,10 +18,10 @@
     </picture>
     <nav>
         <ul class="q-navigation">
-            <li><a href="index.html#q-anchor-home">Home</a></li>
-            <li><a href="index.html#q-anchor-behoerden">Für Behörden</a></li>
-            <li><a href="index.html#q-anchor-buerger">Für Bürger</a></li>
-            <li><a href="index.html#q-anchor-contact">Kontakt</a></li>
+            <li><a href="index.html#home">Home</a></li>
+            <li><a href="index.html#behoerden">Für Behörden</a></li>
+            <li><a href="index.html#buerger">Für Bürger</a></li>
+            <li><a href="index.html#kontakt">Kontakt</a></li>
         </ul>
     </nav>
 </header>
@@ -88,7 +88,7 @@
 <footer class="q-page-foot q-content">
     <section>
         <ul class="q-footer-links">
-            <li><a href="index.html#q-anchor-contact">Kontakt</a></li>
+            <li><a href="index.html#kontakt">Kontakt</a></li>
             <li><a href="agb.html">AGB</a></li>
             <li><a href="datenschutz.html">Datenschutz</a></li>
             <li><a href="impressum.html">Impressum</a></li>
