--- a/index.html
+++ b/index.html
@@ -18,22 +18,23 @@
     </picture>
     <nav>
         <ul class="q-navigation">
-            <li><a href="#q-anchor-home">Home</a></li>
-            <li><a href="#q-anchor-behoerden">Für Behörden</a></li>
-            <li><a href="#q-anchor-buerger">Für Bürger</a></li>
-            <li><a href="#q-anchor-contact">Kontakt</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#behoerden">Für Behörden</a></li>
+            <li><a href="#buerger">Für Bürger</a></li>
+            <li><a href="#kontakt">Kontakt</a></li>
         </ul>
     </nav>
 </header>
-<section class="q-stage" id="q-anchor-home">
+<section class="q-stage q-anchor" id="q-anchor-home">
+    <a class="anchorfix" id="home"></a>
     <section class="q-text-container">
         <header>
             <h1>Digitale Dokumentation von COVID-19 Infektionsfällen & Kontaktpersonen für Gesundheitsbehörden
             </h1>
         </header>
         <div>
-            <a href="#q-anchor-behoerden" class="q-button">Für Behörden</a>
-            <a href="#q-anchor-buerger" class="q-button">Für Bürger</a>
+            <a href="#behoerden" class="q-button">Für Behörden</a>
+            <a href="#buerger" class="q-button">Für Bürger</a>
         </div>
     </section>
     <section class="q-img-container">
@@ -58,6 +59,7 @@
 
 <!-- - -----------------------FÜR BEHÖRDEN---------------------  -->
 <section class="q-stage q-anchor" id="q-anchor-behoerden">
+    <a class="anchorfix" id="behoerden"></a>
     <section class="q-text-container">
         <header>
             <h1>Digitale Dokumentation<br/>von Infektionsfällen <br/>& Kontaktpersonen</h1>
@@ -156,13 +158,14 @@
             diese Mammut-Aufgabe zu meistern (später kann es potentiell auch für andere mögliche Epidemien ausgeweitet
                 werden).
             Melden Sie sich gerne bei uns mit Fragen - wir beraten Sie gerne zu einer zeitnahen Einführung.</p>
-        <p class="q-center"><a href="#q-anchor-contact" class="q-button">Kontakt</a></p>
+        <p class="q-center"><a href="#kontakt" class="q-button">Kontakt</a></p>
     </section>
 </section>
 
 
 <!-- ------------------------FÜR BÜRGER ---------------------  -->
 <section class="q-stage q-anchor" id="q-anchor-buerger">
+    <a class="anchorfix" id="buerger"></a>
     <section class="q-text-container">
         <header>
             <h1>Einfache Eingabe<br/>der relevanten Daten<br/>aus Quarantäne & Isolation</h1>
@@ -211,7 +214,8 @@
     </picture>
     -->
 </section>
-<section class="q-content q-odd-background q-contact" id="q-anchor-contact">
+<section class="q-content q-odd-background q-contact q-anchor" id="q-anchor-contact">
+    <a class="anchorfix" id="kontakt"></a>
     <header>
         <h2>Kontakt</h2>
         <p>quarano lebt von Feedback, Ihren Erfahrungen und auch offenen Fragen. Sprechen Sie uns gerne an!</p>
@@ -223,7 +227,7 @@
 </section>
 <section class="q-content q-sponsor-icons">
     <header>
-        <picture >
+        <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                     srcset="assets/img/sponsor_opensource@2x.png"/>
             <img src="assets/img/sponsor_opensource.png" alt="Open Source Initiative"/>
@@ -243,7 +247,7 @@
 <footer class="q-page-foot q-content">
     <section>
         <ul class="q-footer-links">
-            <li><a href="#q-anchor-contact">Kontakt</a></li>
+            <li><a href="#kontakt">Kontakt</a></li>
             <li><a href="agb.html">AGB</a></li>
             <li><a href="datenschutz.html">Datenschutz</a></li>
             <li><a href="impressum.html">Impressum</a></li>
@@ -254,7 +258,7 @@
 
     </section>
     <section>
-        <picture class = "sponsor-label">
+        <picture class="sponsor-label">
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                     srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
             <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
