--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8"/>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="assets/styles/normalize.css"/>
     <link type="text/css" rel="stylesheet" href="assets/styles/styles.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
