--- a/datenschutz.html
+++ b/datenschutz.html
@@ -35,11 +35,13 @@
 
 <body>
 <header class="q-page-head">
-    <picture class="q-logo">
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="assets/img/QUARANO_LOGO@2x.png"/>
-        <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
-    </picture>
+    <a href="index.html#home" class="q-logo">
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/QUARANO_LOGO@2x.png"/>
+            <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
+        </picture>
+    </a>
     <nav>
         <ul class="q-navigation">
             <li><a href="index.html#home">Home</a></li>
@@ -164,7 +166,7 @@
 
     </section>
     <section>
-        <picture>
+        <picture class="q-logo">
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                     srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
             <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
