--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
 
 <body>
 <header class="q-page-head">
-    <picture class="q-logo">
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="assets/img/QUARANO_LOGO@2x.png"/>
-        <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
-    </picture>
+    <a href="#home" class="q-logo">
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/QUARANO_LOGO@2x.png"/>
+            <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
+        </picture>
+    </a>
     <nav>
         <ul class="q-navigation">
             <li><a href="#home">Home</a></li>
@@ -89,20 +91,11 @@
     <a class="anchorfix" id="behoerden"></a>
     <section class="q-text-container">
         <header>
-            <h1>Digitale Dokumentation<br/>von Infektionsfällen <br/>& Kontaktpersonen</h1>
+            <h2 class="h1">Digitale Dokumentation<br/>von Infektionsfällen <br/>& Kontaktpersonen</h2>
             <hr/>
             <p>Für Behörden</p>
         </header>
     </section>
-    <!-- SHOW NO LOGON ON THE HEADER  FOR NOW
-    <section class="q-img-container">
-        <picture>
-            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/QUARANO_SIGNET_weiss_Kopie@2x.png"/>
-            <img src="assets/img/QUARANO_SIGNET_weiss_Kopie.png" alt="Quarano"/>
-        </picture>
-    </section>
-    -->
 </section>
 <section class="q-stage q-odd-background q-bullet-point-list">
 <article class="q-bullet-point">
@@ -190,26 +183,16 @@
 </section>
 
 
-<!-- ------------------------FÜR BÜRGER ---------------------  -->
+<!-- ------------------------ FÜR BÜRGER ---------------------  -->
 <section class="q-stage q-anchor" id="q-anchor-buerger">
     <a class="anchorfix" id="buerger"></a>
     <section class="q-text-container">
         <header>
-            <h1>Einfache Eingabe<br/>der relevanten Daten<br/>aus Quarantäne & Isolation</h1>
+            <h2 class="h1">Einfache Eingabe<br/>der relevanten Daten<br/>aus Quarantäne & Isolation</h2>
             <hr/>
             <p>Für Bürger</p>
         </header>
     </section>
-    <!-- SHOW NO LOGON ON THE CONTENT FOR NOW
-    <section class="q-img-container">
-        <picture>
-            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/QUARANO_SIGNET_weiss_Kopie@2x.png"/>
-            <img src="assets/img/QUARANO_SIGNET_weiss_Kopie.png" alt="Quarano"/>
-        </picture>
-    </section>
-
-    -->
 </section>
 <section class="q-content">
     <header>
@@ -232,15 +215,15 @@
         </article>
     </section>
 </section>
-<section class="q-info-graph">
-    <!--
-    <picture>
-        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                srcset="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)"/>
-        <img src="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)" alt="Quarano"/>
-    </picture>
-    -->
-</section>
+<!--
+    <section class="q-info-graph">
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)"/>
+            <img src="https://via.placeholder.com/1400x600.png?text=Some Placeholder (Infografik)" alt="Quarano"/>
+        </picture>
+    </section>
+-->
 <section class="q-content q-odd-background q-contact q-anchor" id="q-anchor-contact">
     <a class="anchorfix" id="kontakt"></a>
     <header>
@@ -285,7 +268,7 @@
 
     </section>
     <section>
-        <picture class="sponsor-label">
+        <picture class="q-logo">
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                     srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
             <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
