--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <h3>Als Betroffener in Quarantäne oder häuslicher Isolation sollte die Datenerfassung Sie nicht noch stärker belasten</h3>
         <p>Tragen Sie die meldepflichtigen Daten (Symptomverlauf und Kontaktpersonen) einfach täglich über die quarano Web-Oberfläche ein
         (egal ob mit dem PC, am Smartphone oder dem Tablet). Sie bekommen zu Beginn einen Code von Ihrem zuständigen Gesundheitsamt und
-      können sich dann jederzeit mit einem eigenen Benutzer und Passwort einloggen. So können auch mehrere Mitglieder desselbem Haushaltes
+      können sich dann jederzeit mit einem eigenen Benutzer und Passwort einloggen. So können auch mehrere Mitglieder desselben Haushaltes
       über quarano ihre Daten erfassen.</p>
     </header>
 </section>
