Text entfernt : "später kann es potentiell auch für andere mögliche Epidemien ausgeweitet werden"

--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
 <section class="q-stage q-odd-background">
     <section class="q-content q-content-narrow">
         <p>quarano ist ein auf die COVID-19 Pandemie zugeschnittenes Tool, das es Ihnen als Gesundheitsbehörde erleichtert
-            diese Mammut-Aufgabe zu meistern (später kann es potentiell auch für andere mögliche Epidemien ausgeweitet
-                werden).
+            diese Mammut-Aufgabe zu meistern.
             Melden Sie sich gerne bei uns mit Fragen - wir beraten Sie gerne zu einer zeitnahen Einführung.</p>
         <p class="q-center"><a href="#kontakt" class="q-button">Kontakt</a></p>
     </section>
