Removed navigation temporarily until page is responsive

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
         </picture>
     </a>
+    <!-- deactivated navigation until page is responsive
     <nav>
         <ul class="q-navigation">
             <li><a href="#home">Home</a></li>
@@ -53,6 +54,7 @@
             <li><a href="#kontakt">Kontakt</a></li>
         </ul>
     </nav>
+     -->
 </header>
 <section class="q-stage q-anchor" id="q-anchor-home">
     <a class="anchorfix" id="home"></a>
