--- a/agb.html
+++ b/agb.html
@@ -4,28 +4,30 @@
 <head>
     <meta charset="utf-8"/>
     <title>quarano | Allgemeine Geschäftsbedingungen</title>
-    <meta name="description" content="Sofortige Entlastung der Behörden durch Unterstützung bei Administration und Dokumentation"/>
+    <meta name="description"
+          content="Sofortige Entlastung der Behörden durch Unterstützung bei Administration und Dokumentation"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/img/favicons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/img/favicons/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/favicons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/favicons/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/img/favicons/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="Digitale Dokumentation von COVID-19 Infektionsfällen & Kontaktpersonen für Gesundheitsbehörden"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="img/favicons/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="img/favicons/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="img/favicons/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="img/favicons/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="img/favicons/mstile-310x310.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicons/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicons/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicons/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/img/favicons/apple-touch-icon-144x144.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/img/favicons/apple-touch-icon-60x60.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/favicons/apple-touch-icon-120x120.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/favicons/apple-touch-icon-76x76.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/img/favicons/apple-touch-icon-152x152.png"/>
+    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-196x196.png" sizes="196x196"/>
+    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-16x16.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="assets/img/favicons/favicon-128.png" sizes="128x128"/>
+    <meta name="application-name"
+          content="Digitale Dokumentation von COVID-19 Infektionsfällen & Kontaktpersonen für Gesundheitsbehörden"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-TileImage" content="img/favicons/mstile-144x144.png"/>
+    <meta name="msapplication-square70x70logo" content="img/favicons/mstile-70x70.png"/>
+    <meta name="msapplication-square150x150logo" content="img/favicons/mstile-150x150.png"/>
+    <meta name="msapplication-wide310x150logo" content="img/favicons/mstile-310x150.png"/>
+    <meta name="msapplication-square310x310logo" content="img/favicons/mstile-310x310.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link type="text/css" rel="stylesheet" href="assets/styles/normalize.css"/>
     <link type="text/css" rel="stylesheet" href="assets/styles/styles.css"/>
@@ -42,14 +44,17 @@
             <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
         </picture>
     </a>
-    <nav>
-        <ul class="q-navigation">
-            <li><a href="index.html#home">Home</a></li>
-            <li><a href="index.html#behoerden">Für Behörden</a></li>
-            <li><a href="index.html#buerger">Für Bürger</a></li>
-            <li><a href="index.html#kontakt">Kontakt</a></li>
-        </ul>
-    </nav>
+    <!-- deactivated navigation until page is responsive
+
+<nav>
+    <ul class="q-navigation">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html#behoerden">Für Behörden</a></li>
+        <li><a href="index.html#buerger">Für Bürger</a></li>
+        <li><a href="index.html#kontakt">Kontakt</a></li>
+    </ul>
+</nav>
+-->
 </header>
 <section class="q-stage"></section>
 <section class="q-content">
