--- a/datenschutz.html
+++ b/datenschutz.html
@@ -42,6 +42,7 @@
             <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
         </picture>
     </a>
+    <!-- deactivated navigation until page is responsive
     <nav>
         <ul class="q-navigation">
             <li><a href="index.html#home">Home</a></li>
@@ -50,8 +51,9 @@
             <li><a href="index.html#kontakt">Kontakt</a></li>
         </ul>
     </nav>
-</header>
-<section class="q-stage" ></section>
+    -->
+    </header>
+    <section class="q-stage" ></section>
     <section class="q-content">
         <header>
             <h1>Datenschutzerklärung
@@ -132,8 +134,8 @@
         </div>
     </section>
 
-</section>
-<section class="q-content q-sponsor-icons">
+    </section>
+    <section class="q-content q-sponsor-icons">
     <header>
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
@@ -151,8 +153,8 @@
             <img src="assets/img/sponsor_intersoft.png" alt="Intersoft"/>
         </picture>
     </header>
-</section>
-<footer class="q-page-foot q-content">
+    </section>
+    <footer class="q-page-foot q-content">
     <section>
         <ul class="q-footer-links">
             <li><a href="index.html#kontakt">Kontakt</a></li>
@@ -172,7 +174,7 @@
             <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
         </picture>
     </section>
-</footer>
+    </footer>
 </body>
 
 </html>
