--- a/impressum.html
+++ b/impressum.html
@@ -43,95 +43,97 @@
             <img src="assets/img/QUARANO_LOGO.png" alt="Quarano"/>
         </picture>
     </a>
-    <nav>
-        <ul class="q-navigation">
-            <li><a href="index.html#home">Home</a></li>
-            <li><a href="index.html#behoerden">Für Behörden</a></li>
-            <li><a href="index.html#buerger">Für Bürger</a></li>
-            <li><a href="index.html#kontakt">Kontakt</a></li>
-        </ul>
-    </nav>
+    <!-- deactivated navigation until page is responsive
+<nav>
+    <ul class="q-navigation">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html#behoerden">Für Behörden</a></li>
+        <li><a href="index.html#buerger">Für Bürger</a></li>
+        <li><a href="index.html#kontakt">Kontakt</a></li>
+    </ul>
+</nav>
+-->
 </header>
 <section class="q-stage" ></section>
-    <section class="q-content">
-        <header>
-            <h1>Impressum</h1>
-        </header>
-        <div>
+<section class="q-content">
+    <header>
+        <h1>Impressum</h1>
+    </header>
+    <div>
 
-            <p>Unser Impressum gilt für die Seite quarano.de sowie für Quarano auf Youtube und Twitter.</p>
+        <p>Unser Impressum gilt für die Seite quarano.de sowie für Quarano auf Youtube und Twitter.</p>
 
-            <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
-            <p>Quarano e. V.<br />
-                Rheinstra&szlig;e 24<br />
-                c/o Ferdinand Biere<br />
-                12161 Berlin</p>
+        <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+        <p>Quarano e. V.<br />
+            Rheinstra&szlig;e 24<br />
+            c/o Ferdinand Biere<br />
+            12161 Berlin</p>
 
-            <p><strong>Vertreten durch:</strong><br />
-                Vorsitzender: Ferdinand Biere, Berlin<br />
-                Stellvertretender Vorsitzender: Bodo Biere, Berlin<br />
-                Schriftf&uuml;hrer: Thomas C.V. Schmidt, Berlin</p>
+        <p><strong>Vertreten durch:</strong><br />
+            Vorsitzender: Ferdinand Biere, Berlin<br />
+            Stellvertretender Vorsitzender: Bodo Biere, Berlin<br />
+            Schriftf&uuml;hrer: Thomas C.V. Schmidt, Berlin</p>
 
-            <h2>Kontakt</h2>
-            <p>Telefon: 030-555742080<br />
-                Telefax: 030-555742089<br />
-                E-Mail: info@quarano.de</p>
+        <h2>Kontakt</h2>
+        <p>Telefon: 030-555742080<br />
+            Telefax: 030-555742089<br />
+            E-Mail: info@quarano.de</p>
 
-            <h2>Verantwortlich f&uuml;r den Inhalt nach &sect; 55 Abs. 2 RStV</h2>
-            <p>Ferdinand Biere<br />
-                Rheinstra&szlig;e 24<br />
-                12161, Berlin</p>
+        <h2>Verantwortlich f&uuml;r den Inhalt nach &sect; 55 Abs. 2 RStV</h2>
+        <p>Ferdinand Biere<br />
+            Rheinstra&szlig;e 24<br />
+            12161, Berlin</p>
 
-            <h2>EU-Streitschlichtung</h2>
-            <p>Die Europ&auml;ische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/consumers/odr</a>.<br /> Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
+        <h2>EU-Streitschlichtung</h2>
+        <p>Die Europ&auml;ische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/consumers/odr</a>.<br /> Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
 
-            <h2>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h2><p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
+        <h2>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h2><p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
 
-            <h3>Haftung f&uuml;r Inhalte</h3> <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen.</p> <p>Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p> <h3>Haftung f&uuml;r Links</h3> <p>Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen. F&uuml;r die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf m&ouml;gliche Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p> <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p> <h3>Urheberrecht</h3> <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der Verwertung au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur f&uuml;r den privaten, nicht kommerziellen Gebrauch gestattet.</p> <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+        <h3>Haftung f&uuml;r Inhalte</h3> <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen.</p> <p>Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p> <h3>Haftung f&uuml;r Links</h3> <p>Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen. F&uuml;r die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf m&ouml;gliche Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p> <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p> <h3>Urheberrecht</h3> <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der Verwertung au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur f&uuml;r den privaten, nicht kommerziellen Gebrauch gestattet.</p> <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
 
-            <p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>
-        </div>
-    </section>
+        <p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>
+    </div>
+</section>
 
 <section class="q-content q-sponsor-icons">
-    <header>
-        <picture >
-            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/sponsor_opensource@2x.png"/>
-            <img src="assets/img/sponsor_opensource.png" alt="Open Source Initiative"/>
-        </picture>
-        <picture>
-            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/sponsor_enabler@2x.png"/>
-            <img src="assets/img/sponsor_enabler.png" alt="wirvsvirus enabler"/>
-        </picture>
-        <picture>
-            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/sponsor_intersoft@2x.png"/>
-            <img src="assets/img/sponsor_intersoft.png" alt="Intersoft"/>
-        </picture>
-    </header>
+<header>
+    <picture >
+        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                srcset="assets/img/sponsor_opensource@2x.png"/>
+        <img src="assets/img/sponsor_opensource.png" alt="Open Source Initiative"/>
+    </picture>
+    <picture>
+        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                srcset="assets/img/sponsor_enabler@2x.png"/>
+        <img src="assets/img/sponsor_enabler.png" alt="wirvsvirus enabler"/>
+    </picture>
+    <picture>
+        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                srcset="assets/img/sponsor_intersoft@2x.png"/>
+        <img src="assets/img/sponsor_intersoft.png" alt="Intersoft"/>
+    </picture>
+</header>
 </section>
 <footer class="q-page-foot q-content">
-    <section>
-        <ul class="q-footer-links">
-            <li><a href="index.html#kontakt">Kontakt</a></li>
-            <li><a href="agb.html">AGB</a></li>
-            <li><a href="datenschutz.html">Datenschutz</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
-        </ul>
-        <hr/>
-    </section>
-    <section>
+<section>
+    <ul class="q-footer-links">
+        <li><a href="index.html#kontakt">Kontakt</a></li>
+        <li><a href="agb.html">AGB</a></li>
+        <li><a href="datenschutz.html">Datenschutz</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
+    </ul>
+    <hr/>
+</section>
+<section>
 
-    </section>
-    <section>
-        <picture class="q-logo">
-            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
-            <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
-        </picture>
-    </section>
+</section>
+<section>
+    <picture class="q-logo">
+        <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                srcset="assets/img/QUARANO_LOGO_weiss@2x.png"/>
+        <img src="assets/img/QUARANO_LOGO_weiss.png" alt="Quarano"/>
+    </picture>
+</section>
 </footer>
 </body>
 
