link to github fixes #1

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#behoerden">Für Behörden</a></li>
             <li><a href="#buerger">Für Bürger</a></li>
+            <li><a href="#developer">Für Entwickler</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
         </ul>
     </nav>
@@ -225,14 +226,25 @@
         </picture>
     </section>
 -->
-<section class="q-content q-odd-background q-contact q-anchor" id="q-anchor-contact">
+<section class="q-content q-odd-background q-contact q-anchor q-columns" id="q-anchor-contact">
     <a class="anchorfix" id="kontakt"></a>
-    <header>
+    <header class="q-column">
         <h2>Kontakt</h2>
         <p>quarano lebt von Feedback, Ihren Erfahrungen und auch offenen Fragen. Sprechen Sie uns gerne an!</p>
         <ul>
             <li>E-Mail: <a href="mailto:info@quarano.de">info@quarano.de</a></li>
             <li>Telefon: <a href="tel:+49 176 20647019">+49 176 20647019</a></li>
+        </ul>
+    </header>
+    <header class="q-column">
+        <h2>OpenSource</h2>
+        <p>quarano ist Open Source und lebt auch von aktiver Mitarbeit.</p>
+        <ul>
+            <li>
+                <a href="https://github.com/quarano/quarano-application">    
+                <img src="assets/img/GitHub-Mark-120px-plus.png" alt="Quarano auf GitHub" height="30px"/>
+                GitHub</a>
+            </li>
         </ul>
     </header>
 </section>
@@ -258,6 +270,7 @@
 <footer class="q-page-foot q-content">
     <section>
         <ul class="q-footer-links">
+            <li><a href="https://github.com/quarano/quarano-application">GitHub</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
             <li><a href="agb.html">AGB</a></li>
             <li><a href="datenschutz.html">Datenschutz</a></li>
