--- a/index.html
+++ b/index.html
@@ -238,11 +238,14 @@
 </section>
 <section class="q-content q-sponsor-icons">
     <header>
+        <h3 style="margin-bottom: 5px;">Unsere Partner</h3>
+        <hr class="light-grey">
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/sponsor_opensource@2x.png"/>
-            <img src="assets/img/sponsor_opensource.png" alt="Open Source Initiative"/>
+                    srcset="assets/img/logos-parter.jpg"/>
+            <img src="assets/img/logos-parter.jpg" alt="Logos der Partner"/>
         </picture>
+<!--
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
                     srcset="assets/img/sponsor_enabler@2x.png"/>
@@ -253,6 +256,30 @@
                     srcset="assets/img/sponsor_intersoft@2x.png"/>
             <img src="assets/img/sponsor_intersoft.png" alt="Intersoft"/>
         </picture>
+-->
+    </header>
+</section>
+<section class="q-content q-supporter-icons">
+    <header>
+        <h3 style="margin-bottom: 5px;">Unsere Unterstützer</h3>
+        <hr class="light-grey">
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/logos-supporter.jpg"/>
+            <img src="assets/img/logos-supporter.jpg" alt="Logos der Unterstützer"/>
+        </picture>
+        <!--
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/sponsor_enabler@2x.png"/>
+            <img src="assets/img/sponsor_enabler.png" alt="wirvsvirus enabler"/>
+        </picture>
+        <picture>
+            <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
+                    srcset="assets/img/sponsor_intersoft@2x.png"/>
+            <img src="assets/img/sponsor_intersoft.png" alt="Intersoft"/>
+        </picture>
+        -->
     </header>
 </section>
 <footer class="q-page-foot q-content">
