--- a/impressum.html
+++ b/impressum.html
@@ -66,8 +66,11 @@
         <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
         <p>Quarano e. V.<br />
             Rheinstra&szlig;e 24<br />
-            c/o Ferdinand Biere<br />
             12161 Berlin</p>
+        
+        <p>Vereinsregister AG Charlottenburg, Berlin<br />
+        <p>Eintrag im Vereinsregister unter Nummer: 38274<br />
+        <p>Steuernummer: 27/640/61224<br />
 
         <p><strong>Vertreten durch:</strong><br />
             Vorsitzender: Ferdinand Biere, Berlin<br />
