Add new logo’s & refactoring

--- a/public/index.html
+++ b/public/index.html
@@ -242,8 +242,8 @@
         <hr class="light-grey">
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/logos-parter.jpg"/>
-            <img src="assets/img/logos-parter.jpg" alt="Logos der Partner"/>
+                    srcset="assets/img/logos_partner/logos-parter.jpg"/>
+            <img src="assets/img/logos_partner/logos-parter.jpg" alt="Logos der Partner"/>
         </picture>
 <!--
         <picture>
@@ -265,8 +265,8 @@
         <hr class="light-grey">
         <picture>
             <source media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
-                    srcset="assets/img/logos-supporter.jpg"/>
-            <img src="assets/img/logos-supporter.jpg" alt="Logos der Unterstützer"/>
+                    srcset="assets/img/logos_supporter/logos-supporter.jpg"/>
+            <img src="assets/img/logos_supporter/logos-supporter.jpg" alt="Logos der Unterstützer"/>
         </picture>
         <!--
         <picture>
