--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
         <header>
             <h2 class="q-bullet-point-head">Infektionsketten / Cluster</h2>
         </header>
-        <p>Durch die Angaben über direkte Kontaktpersonen des Infektionsfalls (RKI Kategorie I und III) können diese direkt informiert und gesammelt
+        <p>Durch die Angaben über direkte Kontaktpersonen des Infektionsfalls können diese direkt informiert und gesammelt
             erfasst werden. Über eine Oberfläche können die Gesundheitsbehörden direkt einsehen, welche Kontakte
             angegeben wurden und ggfls. kontaktiert werden müssen. Diese Nachverfolgung und Dokumentation der
             Cluster / Infektionsketten durch die Gesundheitsbehörden ist bereits jetzt ein zentraler Punkt des nationalen
